- fixed \magnificaton bug (dvi magnification factor is now applied properly)

dvisvgm-0.6.1
- added support for dvips map files
- removed dependency on dvipdfm map file (now ps2pk.map, psfonts.map or dvipdfm.map is used by default)
- fixed compilation bug (id #2535497)
- some internal refactorings

dvisvgm-0.6
- added support for varying font encodings
- updated MikTeX support using the COM interface
- fixed incomplete handling of nested virtual fonts
- fixed a font handling bug that could cause segmentation faults
- fixed bug in matrix transformation code
- updated bundled potrace library to version 1.8

dvisvgm-0.5
- redesigned and improved font handling
- added support for virtual fonts
- evaluation of dvipdfm's map file to find font files with differing 
  names (e.g. cork-lmr10 => lmr10)
- automatic invocation of mktexmf etc. in case of missing font files (tfm, mf)
- command-line option -m has been renamed to -M
- added command-line options -m/--map-file and -n/--no-mktexmf
- memory bug in StreamCounter class has been fixed
- added sources of Peter Selinger's potrace library (part of potrace, http://potrace.sourceforge.net) 
  to simplify the build process

dvisvgm-0.4.3
- problem with changed freetype API (freetype version >= 2.2.1) has been fixed
- updated MiKTeX support to version 2.5 
- minor code improvements
- some unit tests based on CxxTest (http://cxxtest.sourceforge.net) have been added

dvisvgm-0.4.2
- added SVG transformation options
- some bugfixes in command line frontend and TFM handling
- code refactorings to improve modularity and extensibility

dvisvgm-0.4.1:
- added option -b to specify the bounding box
- added a manual page 

dvisvgm-0.4:
Added a glyph tracing module that vectorizes Metafont's bitmap output
if no corresponding Type 1 font file is available.

dvisvgm-0.3:
Inititial public release with basic conversion functionality.