@@ -1,9 +1,10 @@
 - fixed \magnificaton bug (dvi magnification factor is now applied properly)
+- fixed buggy call of maketfm/makemf in Windows/MiKTeX version
 
 dvisvgm-0.6.1
 - added support for dvips map files
 - removed dependency on dvipdfm map file (now ps2pk.map, psfonts.map or dvipdfm.map is used by default)
-- fixed compilation bug (id #2535497)
+- fixed compilation bug #2535497
 - some internal refactorings
 
 dvisvgm-0.6
